# NumCpp

./: CMakeLists.txt  README.md
Docs/: readme
src/: flags.h  main.cpp
src/calculus/: integration.cpp  integration.h  ode.h
src/io/: data_reader.h  data_writer.cpp  data_writer.h
src/math/: math.cpp  math.h
src/matrix/: matrix.cpp  matrix.h  nArray.cpp  nArray.h
src/number/: CMakeLists.txt  count.cpp  count.h  float.h  fraction.h  int.cpp  integer.cpp  integer.h  main.cpp
src/ode/: ode.cpp
src/tests/: math_test.h  matrix_test.h  ode_test.h  test_io.cpp  test_io.h
